--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="wrapper">
             <div class="app-container rockPaperScisors">
                 <h4 class="app-title">Rock Paper Scissors</h4>
-                <a class="live-rockPaperScisors" href="./Rock Paper Scissors/index.html" target="_blank">
+                <a class="live-rockPaperScisors" href="./RockPaperScissors/index.html" target="_blank">
                     <div class="image bg-rockPaperScisors"></div>
                 </a>
 
@@ -48,13 +48,13 @@
 
             <div class="app-container drumKit">
                 <h4 class="app-title">Drum Kit</h4>
-                <a class="live-drumKit" href="./Drum Kit/index.html" target="_blank">
+                <a class="live-drumKit" href="./DrumKit/index.html" target="_blank">
                     <div class="image bg-drumKit"></div>
                 </a>
 
                 <div class="buttons">
                     <div class="button-code">
-                        <a class="code-rockPaperScisors"
+                        <a class="code-drumKit"
                             href="https://github.com/karina4840/java-mini-apps/tree/main/Drum%20Kit" target="_blank">
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
@@ -69,7 +69,7 @@
 
             <div class="app-container tipCalculator">
                 <h4 class="app-title">Tip Calculator</h4>
-                <a class="live-tipCalculator" href="./Tip Calculator/index.html" target="_blank">
+                <a class="live-tipCalculator" href="./TipCalculator/index.html" target="_blank">
                     <div class="image bg-tipCalculator"></div>
                 </a>
 
@@ -91,15 +91,14 @@
 
             <div class="app-container simonSays">
                 <h4 class="app-title">Simon Says</h4>
-                <a class="live-simonSays" href="./Simon Says/index.html" target="_blank">
+                <a class="live-simonSays" href="./SimonSays/index.html" target="_blank">
                     <div class="image bg-simonSays"></div>
                 </a>
 
                 <div class="buttons">
                     <div class="button-code">
                         <a class="code-simonSays"
-                            href="https://github.com/karina4840/java-mini-apps/tree/main/Simon%20Says"
-                            target="_blank">
+                            href="https://github.com/karina4840/java-mini-apps/tree/main/Simon%20Says" target="_blank">
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
                                 class="css-i6dzq1 code-button">
@@ -134,7 +133,7 @@
 
             <div class="app-container colorFlip">
                 <h4 class="app-title">Colour Flipper</h4>
-                <a class="live-colorFlip" href="./Colour Flipper/index.html" target="_blank">
+                <a class="live-colorFlip" href="./ColourFlipper/index.html" target="_blank">
                     <div class="image bg-colorFlip"></div>
                 </a>
 
@@ -156,7 +155,7 @@
 
             <div class="app-container countDown">
                 <h4 class="app-title">Countdown App</h4>
-                <a class="live-countDown" href="./Countdown Clock/index.html" target="_blank">
+                <a class="live-countDown" href="./CountdownClock/index.html" target="_blank">
                     <div class="image bg-countDown"></div>
                 </a>
 
