--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="buttons">
                     <div class="button-code">
                         <a class="code-rockPaperScisors"
-                            href="https://github.com/karina4840/java-mini-apps/tree/main/Rock%20Paper%20Scissors"
+                            href="https://github.com/karina4840/java-mini-apps/tree/main/RockPaperScissors"
                             target="_blank">
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
@@ -55,7 +55,7 @@
                 <div class="buttons">
                     <div class="button-code">
                         <a class="code-drumKit"
-                            href="https://github.com/karina4840/java-mini-apps/tree/main/Drum%20Kit" target="_blank">
+                            href="https://github.com/karina4840/java-mini-apps/tree/main/DrumKit" target="_blank">
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
                                 class="css-i6dzq1 code-button">
@@ -76,7 +76,7 @@
                 <div class="buttons">
                     <div class="button-code">
                         <a class="code-tipCalculator"
-                            href="https://github.com/karina4840/java-mini-apps/tree/main/Tip%20Calculator"
+                            href="https://github.com/karina4840/java-mini-apps/tree/main/TipCalculator"
                             target="_blank">
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
@@ -98,7 +98,7 @@
                 <div class="buttons">
                     <div class="button-code">
                         <a class="code-simonSays"
-                            href="https://github.com/karina4840/java-mini-apps/tree/main/Simon%20Says" target="_blank">
+                            href="https://github.com/karina4840/java-mini-apps/tree/main/SimonSays" target="_blank">
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
                                 class="css-i6dzq1 code-button">
@@ -140,7 +140,7 @@
                 <div class="buttons">
                     <div class="button-code">
                         <a class="code-colorFlip"
-                            href="https://github.com/karina4840/java-mini-apps/tree/main/Colour%20Flipper"
+                            href="https://github.com/karina4840/java-mini-apps/tree/main/ColourFlipper"
                             target="_blank">
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
@@ -162,7 +162,7 @@
                 <div class="buttons">
                     <div class="button-code">
                         <a class="code-countDown"
-                            href="https://github.com/karina4840/java-mini-apps/tree/main/Countdown%20Clock"
+                            href="https://github.com/karina4840/java-mini-apps/tree/main/CountdownClock"
                             target="_blank">
                             <svg viewBox="0 0 24 24" width="20" height="20" stroke="currentColor" stroke-width="2"
                                 fill="none" stroke-linecap="round" stroke-linejoin="round"
